fixed spacing issue on stockists page

--- a/src/App.scss
+++ b/src/App.scss
@@ -91,7 +91,7 @@ img {
 .stockists-content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 60%;
   height: 70vh;
 
